input form prog

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Frontend</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,500,700,800,900&display=swap" rel="stylesheet"> 
+    <script src="https://kit.fontawesome.com/c97078b2b7.js" crossorigin="anonymous"></script>
 </head>
 <header>
     <h2 class="logo-header">Wat Eten We Vanavond?</h2>
@@ -28,7 +29,11 @@
                         <input type="checkbox">
                         <span class="slider round"></span>
                     </label>
-                    <input type="submit" value="Verzend">
+                    <label for="points">Tijd</label>
+                    <input type="number" id="points" step="5">
+                    <label for="mensen">Aantal Mensen</label>
+                    <input type="number" id="aantalMensen" step="1">
+                    <input onclick="Submit()" type="submit" value="Verzend">
                 </form>   
             </div>
         </div>
