--- a/index.html
+++ b/index.html
@@ -20,19 +20,46 @@
                     Geen inspiratie om wat te koken vanavond? Ook klaar met het gezeik van je kinderen? 
                     Voer hier in waar je enigszins trek in hebt of waar je vanaf moet en versimpel je keuze.
                 </p>
-                <form>
+                <form class="form-flex">
                     <h2>Voer je wensen in</h2>
-                    <label for="fname">Ik heb zin in:</label>
-                    <input type="text" id="fname" name="fname">
-                    <label>Vegetarisch:</label>
-                    <label class="switch">
-                        <input type="checkbox">
-                        <span class="slider round"></span>
-                    </label>
-                    <label for="points">Tijd</label>
-                    <input type="number" id="points" step="5">
-                    <label for="mensen">Aantal Mensen</label>
-                    <input type="number" id="aantalMensen" step="1">
+                    <div class="form-flex-item">
+                        <label for="fname">Ik heb zin in:</label>
+                        <input type="text" id="fname" name="fname">
+                    </div>
+                    <div class="form-flex-item">
+                        <label>Vegetarisch:</label>
+                        <label class="switch">
+                            <input type="checkbox">
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
+                    <div class="form-flex-item">
+                        <label>Student:</label>
+                        <label class="switch">
+                            <input type="checkbox">
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
+                    <div class="form-flex-item">
+                        <label>Gezond:</label>
+                        <label class="switch">
+                            <input type="checkbox">
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
+                    <div class="form-flex-item">
+                        <label for="Tijd">Tijd:</label>
+                        <select id="Tijd">
+                            <option value="15m">15m</option>
+                            <option value="30m">30m</option>
+                            <option value="45m">45m</option>
+                            <option value="60m">60m</option>
+                        </select>
+                    </div>
+                    <div class="form-flex-item">
+                        <label for="mensen">Aantal Mensen:</label>
+                        <input type="number" id="aantalMensen" step="1" max="10">
+                    </div>
                     <input onclick="Submit()" type="submit" value="Verzend">
                 </form>   
             </div>
@@ -40,6 +67,11 @@
     </main>
     <div id="app">
     </div>
+    <footer>
+        <div>
+            <p>Frontend voor Designers | Daniël van der Schuur</p>
+        </div>   
+    </footer>    
     <script src="index.js"></script>
 </body>
 </html>
