vegetarian filter working

--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
                     <div class="form-flex-item">
                         <label>Vegetarisch:</label>
                         <label class="switch">
-                            <input type="checkbox">
+                            <input type="checkbox" id="vegetarian">
                             <span class="slider round"></span>
                         </label>
                     </div>
                     <div class="form-flex-item">
                         <label>Student:</label>
                         <label class="switch">
-                            <input type="checkbox">
+                            <input type="checkbox" id="student">
                             <span class="slider round"></span>
                         </label>
                     </div>
                     <div class="form-flex-item">
                         <label>Gezond:</label>
                         <label class="switch">
-                            <input type="checkbox">
+                            <input type="checkbox" id="healthy">
                             <span class="slider round"></span>
                         </label>
                     </div>
-                    <div class="form-flex-item">
+                    <!-- <div class="form-flex-item">
                         <label for="Tijd">Tijd:</label>
                         <select id="Tijd">
                             <option value="15m">15m</option>
@@ -55,11 +55,11 @@
                             <option value="45m">45m</option>
                             <option value="60m">60m</option>
                         </select>
-                    </div>
-                    <div class="form-flex-item">
+                    </div> -->
+                    <!-- <div class="form-flex-item">
                         <label for="mensen">Aantal Mensen:</label>
                         <input type="number" id="aantalMensen" step="1" max="10">
-                    </div>
+                    </div> -->
                     <input onclick="Submit()" type="submit" value="Verzend">
                 </form>   
             </div>
