filters working, no health yet, styling not finished

--- a/index.html
+++ b/index.html
@@ -22,30 +22,32 @@
                 </p>
                 <form class="form-flex">
                     <h2>Voer je wensen in</h2>
-                    <div class="form-flex-item">
-                        <label for="fname">Ik heb zin in:</label>
-                        <input type="text" id="fname" name="fname">
-                    </div>
-                    <div class="form-flex-item">
-                        <label>Vegetarisch:</label>
-                        <label class="switch">
-                            <input type="checkbox" id="vegetarian">
-                            <span class="slider round"></span>
-                        </label>
-                    </div>
-                    <div class="form-flex-item">
-                        <label>Student:</label>
-                        <label class="switch">
-                            <input type="checkbox" id="student">
-                            <span class="slider round"></span>
-                        </label>
-                    </div>
-                    <div class="form-flex-item">
-                        <label>Gezond:</label>
-                        <label class="switch">
-                            <input type="checkbox" id="healthy">
-                            <span class="slider round"></span>
-                        </label>
+                    <div class="input-items">
+                        <!-- <div class="form-flex-item">
+                            <label for="fname">Ik heb zin in:</label>
+                            <input type="text" id="fname" name="fname">
+                        </div> -->
+                        <div class="form-flex-item">
+                            <label>Vegetarisch:</label>
+                            <label class="switch">
+                                <input type="checkbox" id="vegetarian">
+                                <span class="slider round"></span>
+                            </label>
+                        </div>
+                        <div class="form-flex-item">
+                            <label>Student:</label>
+                            <label class="switch">
+                                <input type="checkbox" id="student">
+                                <span class="slider round"></span>
+                            </label>
+                        </div>
+                        <div class="form-flex-item">
+                            <label>Gezond:</label>
+                            <label class="switch">
+                                <input type="checkbox" id="healthy">
+                                <span class="slider round"></span>
+                            </label>
+                        </div>
                     </div>
                     <!-- <div class="form-flex-item">
                         <label for="Tijd">Tijd:</label>
