loader and santizer added

--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
                         <label for="mensen">Aantal Mensen:</label>
                         <input type="number" id="aantalMensen" step="1" max="10">
                     </div> -->
-                    <input onclick="Submit()" type="submit" value="Verzend">
+                    <div id="submit">
+                        <input onclick="Submit()" type="submit" value="Verzend">
+                        <div id="loader-placeholder"></div>
+                    </div>
                 </form>   
             </div>
         </div>
